[package]
name = "ip-location-db-lookup"
version = "0.1.0"
authors = ["Elvyria <elvyria@tutanota.com>"]
repository = "https://github.com/Elvyria/ip-location-db-lookup"
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "1.0"
argh = "0.1"
memmap2 = "0.9"

[profile.dev]
debug-assertions = false

[dev-dependencies]
gungraun = "0.17"

[[bench]]
name = "lookup"
harness = false
